/* 
  Localizable.strings
  ItemFinder

  Created by Julio Collado on 11/9/19.
  Copyright © 2019 Julio Collado. All rights reserved.
*/

///Main
"main.welcome.label" = "Welcome to ItemFinder ML!";
"main.next.button" = "Next";

///Finder
"finder.searchBar.placeholder" = "Search Item";

///Item Detail
"detail.label.stock" = "Stock:";
"detail.button.saveImage" = "Save Image";

///Alerts
"alert.error" = "Error";
"alert.title.warning" = "Warning";
"alert.notFound" = "No results found for this search";
"alert.character.limit" = "Fifty is the limit of characters permitted";
"alert.action.ok" = "OK";
"alert.notInternetConection" = "No Internet Found check your connection";

///Error Message
"error.range300" = "The operation could not be completed";
"error.range400" = "Sorry, something went wrong. We are working on it and we'll get it fixed as soon as we can";
"error.range500" = "Service unavailable, please try later";
